--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -8,11 +8,10 @@
 
 <h1>Movies here yes</h1>
 
-<div classname="rand-movie">
+<div id="rand-movie">
   <h2><%= @title %></h2>
   <ul>
-    <li><%= @rating %></li>
-    <li>"<%= @synopsis %>"</li>
+    <li><%= @rating %></li> <li>"<%= @synopsis %>"</li>
   </ul>
   <img src=<%= @poster %> />
 </div>
