--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,19 @@
   </head>
 
   <body>
+    <nav class="title-bar" data-topbar role="navigation">
+      <div class="title-bar-left">
+        <h1 class="title-text"><a href="<%= root_path %>">Pick Me a Movie</a></h1>
+      </div>
+      <div class="title-bar-right">
+        <% if user_signed_in? %>
+          <%= link_to 'Sign Out', destroy_user_session_path, method: :delete %> |
+        <% else %>
+          <%= link_to 'Sign In', new_user_session_path %> |
+          <%= link_to 'Sign Up', new_user_registration_path %>
+        <% end %>
+      </div>
+    </nav>
 
     <%= yield %>
 
